# ironmon_emu

./: .gitignore  .gitmodules  CHANGELOG.md  CLAUDE.md  CLAUDE_ARCHITECTURE.md  README.md  test_memapi.py
claude_docs/: build_system.md  data_addresses.md  data_readers.md  game_activity_layout.md  lookup_tables.md  memory_bridge.md  models.md  persistence.md  pokemon_decoder.md  quickload.md  tracker_panel.md  tracker_poller.md
docs/: _config.yml  index.md
ironmon-tracker-android/: TRACKER_VERSION.md  gradlew  settings.gradle.kts
ironmon-tracker-android/app/: build.gradle.kts
ironmon-tracker-android/gradle/: libs.versions.toml
mgba-android-memapi/: INTEGRATION_NOTES.md
mgba-android-memapi/android-fork/: .gitignore  settings.gradle  setup.sh
mgba-android-memapi/android-fork/app/: build.gradle.kts
mgba-android-memapi/android-fork/app/src/main/cpp/: CMakeLists.txt  memapi_server.h  oboe-audio.cpp  runGame.cpp
mgba-android-memapi/android-fork/app/src/main/cpp/android/opengl/: gles2.h
mgba-android-memapi/android-fork/app/src/main/cpp/android/sdl/: gl-common.c  main.h
mgba-android-memapi/android-fork/app/src/main/cpp/android/utils/: gbaUtils.cpp
mgba-android-memapi/build-desktop/: CMakeCache.txt  CPackConfig.cmake  CPackSourceConfig.cmake  Makefile  cmake_install.cmake  libmgba.so.0.11  mgba-headless  version.c
mgba-android-memapi/build-desktop/discord-rpc/: Makefile  cmake_install.cmake
mgba-android-memapi/build-desktop/sdl/: Makefile  cmake_install.cmake  mgba
mgba-android-memapi/build-desktop/test/: Makefile  cmake_install.cmake
(+128 files in other folders)
